--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,12 @@
 language: java
 jdk:
 - openjdk8
-script: ant build
+
+addons:
+  sonarcloud:
+    organization: "GabryLele98"
+    token: "80ffe442468eb4a73d21c1916b5df42d2a65f408"
+
+script:
+- ant build
+- sonar-scanner
