--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ jdk:
 
 addons:
   sonarcloud:
-    organization: "GabryLele98"
+    organization: "gabryLele98"
     token: "80ffe442468eb4a73d21c1916b5df42d2a65f408"
 
 script:
